# Recommendations-System

./: 02_tableau_ajouter.cpp  03_tableau_inserer.cpp  06_tableau_unique.cpp  07_tableau_vider.cpp  08_membre_compilation.cpp  12_performances.cpp  CMakeLists.txt  README.md  tableau.h
App/: 01_tableau_compilation.cpp  04_tableau_enlever.cpp  05_tableau_occurrence.cpp  06  09_membre_creation.cpp  10_membre_suggestion.cpp  11_membre_suggestion.cpp  12  extraction.h  groupe.txt  membre.h  tableau.h  tp1.cpp
